Added Favourite teams page; Writing in DB

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Main</title>
     <link rel="stylesheet" href="/css/site.css">
     <link rel='shortcut icon' type='image/x-icon' href='/images/favicon.ico' />
-  
+
+    <script src="/node_modules/express/index.js"></script>
+    <script src="/node_modules/express-handlebars/index.js"></script>
+    <script src="/node_modules/handlebars/dist/handlebars.min.js"></script>
+    <script src="/node_modules/body-parser/index.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    
+    <script src="/index.js"></script>
+    <script>console.log("test1")</script>
 </head>
 <body>
     <header>
@@ -20,6 +28,12 @@
             </ul>
         </nav>
     </header>
-    {{{ body }}}
+
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
